fixed: fix data comapre, close #32, close #34
